--- a/cssFile/index.css
+++ b/cssFile/index.css
@@ -1,28 +1,34 @@
+html,
+body {
+  height: 100%;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+}
+
+main {
+  flex-grow: 1;
+  padding: 10px
+}
 
 
 header {
+    padding: 30px;
     text-transform: uppercase;
     height: 100px;
     padding-top: 10px;
     background-color: rgb(220, 207, 192);
+    width: 100%;
     
 }
-
-
-
 
 header ul
 {
     display: flex;
     justify-content: space-between;
-    padding-left: 60px;
-    padding-right: 50px;
-    width: 80%;
-}
 
-
-main{
-    padding: 10px
 }
 
 ul
@@ -82,10 +88,8 @@ footer {
     display: flex;
     justify-content: center; 
     padding: 35px;
-    position: absolute;
-    bottom: 0;
     width: 100%;
-    height: 60px;
+
     background-color: rgb(220, 207, 192);
 }
 
@@ -97,6 +101,73 @@ footer ul {
     padding: 0; 
 }
 
+.model {
+    display: none;
+    position: fixed;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.5);
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.close-btn {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background-color: red;
+    color: white;
+    border: none;
+    border-radius: 50%;
+    cursor: pointer;
+    width: 25px;
+    height: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+input[type="text"],
+input[type="email"] {
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    width: calc(100% - 22px);
+}
+
+input[type="submit"] {
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    background-color: #5cb85c;
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
+    margin-top: 10px;
+}
+
+input[type="submit"]:hover {
+    background-color: #4cae4c;
+}
+
+h2 {
+    margin-top: 0;
+    color: #333;
+}
+
+.btn {
+    padding: 10px 20px;
+    font-size: 18px;
+    color: white;
+    background-color: #007bff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
 
 
 
