--- a/index.css
+++ b/index.css
@@ -1,16 +1,24 @@
 html,
-body {
-  height: 100%;
-}
+
 
 body {
+    height: 100%;
   display: flex;
   flex-direction: column;
+  margin: 0;
+}
+
+body.dark-mode header, body.dark-mode footer {
+    background-color: #333;
 }
 
 main {
+    justify-content: center;
+    align-items: center;
+display: flex;
   flex-grow: 1;
   padding: 10px
+  
 }
 
 
@@ -20,7 +28,6 @@ header {
     height: 100px;
     padding-top: 10px;
     background-color: rgb(220, 207, 192);
-    width: 100%;
     
 }
 
@@ -46,7 +53,7 @@ ul
     background-size: cover;
     width: 30px;
     height: 30px;
-    background-image: url("../assets/edit.png");
+    background-image: url("assets/edit.png");
     background-repeat: no-repeat;
     cursor: pointer;
     
@@ -58,7 +65,7 @@ ul
     background-size: cover;
     width: 30px;
     height: 30px;
-    background-image: url("../assets/trash.png");
+    background-image: url("assets/trash.png");
     background-repeat: no-repeat;
     cursor: pointer;
 
@@ -70,7 +77,7 @@ ul
     background-size: cover;
     width: 30px;
     height: 30px;
-    background-image: url("../assets/eye.png");
+    background-image: url("assets/eye.png");
     background-repeat: no-repeat;
     cursor: pointer;
 }
@@ -115,7 +122,6 @@ footer {
     display: flex;
     justify-content: center; 
     padding: 35px;
-    width: 100%;
 
     background-color: rgb(220, 207, 192);
 }
@@ -208,4 +214,19 @@ h2 {
     position: relative;
 }
 
+.dark-mode
+{
+    background-color: black;
+    color: white;
+}
 
+.container
+{
+    justify-content: center; /* Horizontally center items */
+    align-items: center;
+}
+
+.dark-mode-header
+{
+    background-color: #4cae4c;
+}
