--- a/index.css
+++ b/index.css
@@ -1,186 +1,293 @@
+/* General Styling */
 html,
-
-
 body {
     height: 100%;
-  display: flex;
-  flex-direction: column;
-  margin: 0;
-}
-
-body.dark-mode header, body.dark-mode footer {
-    background-color: #333;
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    font-family: "Roboto", sans-serif;
 }
 
 main {
     justify-content: center;
     align-items: center;
-display: flex;
-  flex-grow: 1;
-  padding: 10px
-  
+    display: flex;
+    flex-grow: 1;
+    padding: 0.625rem;
 }
 
+/* Header Styling */
 
 header {
-    padding: 30px;
+    padding: 1.875rem;
     text-transform: uppercase;
-    height: 100px;
-    padding-top: 10px;
-    background-color: rgb(220, 207, 192);
-    
+    height: 6.25rem;
+    padding-top: 0.625rem;
+    background-color: #AC9362;
 }
 
-header ul
-{
+header ul {
     display: flex;
     justify-content: space-between;
-
 }
 
-ul
-{
+ul {
     text-transform: uppercase;
     list-style-type: none;
-    font-size: 30px;
-    
+    font-size: 1.875rem;
 }
 
-
-
-.editbuttom
-{
-    background-size: cover;
-    width: 30px;
-    height: 30px;
-    background-image: url("assets/edit.png");
-    background-repeat: no-repeat;
-    cursor: pointer;
-    
-
+.hftext {
+    color: white;
 }
 
-.delbuttom
-{
-    background-size: cover;
-    width: 30px;
-    height: 30px;
-    background-image: url("assets/trash.png");
-    background-repeat: no-repeat;
-    cursor: pointer;
-
-
+.header-icon {
+    width: 3.125rem;
+    height: 3.125rem;
+    margin-right: 0.5rem;
 }
 
-.showinfo
-{
-    background-size: cover;
-    width: 30px;
-    height: 30px;
-    background-image: url("assets/eye.png");
-    background-repeat: no-repeat;
-    cursor: pointer;
-}
+/* Contact List Styling */
 
-.showinfo:hover {
-    background-color: rgb(76, 174, 76, 0.5);
-}
-
-.delbuttom:hover
-{
-    background-color: rgb(255, 0, 0,0.5);
-}
-
-.editbuttom:hover
-{
-    background-color: rgb(0, 123, 255, 0.5);
-}
-
-.contact
-{
-    display:flex;
-    padding: 3px;
-    
-}
-
-.formwrap
-{
-    width: 250px;
-    display: none;
-}
-.contactform
-{
-    gap: 10px;
-    
-}
-.hideform
-{
-    display: block;
-}
-
-footer {
-    display: flex;
-    justify-content: center; 
-    padding: 35px;
-
-    background-color: rgb(220, 207, 192);
-}
-
-footer ul {
-    display: flex;
-    justify-content: space-between;
-    width: 95%; 
-    margin: 0; 
-    padding: 0; 
-}
-
-.model {
-    display: none;
-    position: fixed;
-    top:0;
-    left: 0;
+.contact-table {
     width: 100%;
-    height: 100%;
-    background-color: rgba(0,0,0,0.5);
-    justify-content: center;
+    max-width: 50rem;
+    margin-bottom: 1.25rem;
+    border-radius: 0.3125rem;
+}
+
+.contact-item {
+    transition: background-color 0.3s ease; /* Apply transition effect to background color */
+}
+
+.contact-header {
+    display: flex;
+    background-color: #f0f0f0;
+    border-bottom: 3px solid #AC9362;
+    padding: 0.9375rem;
+    font-weight: bold;
+    color: #333;
+}
+
+.contact-name-header, .contact-number-header, .contact-actions-header {
+    flex: 1;
+    text-align: left;
+    padding-right: 1rem;
+}
+
+.contact-name-header {
+    padding-right: 2rem; /* More space before the next column */
+}
+
+.contact-number-header {
+    padding-right: 2rem; /* More space before the next column */
+}
+
+.contact-list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    font-size: 1.2rem;
+}
+
+.contact-item {
+    display: flex;
+    padding: 0.9375rem;
+}
+
+.no-contacts-message {
+    text-align: center;
+    font-size: 1.25rem;
+    color: darkgrey;
+    margin-top: 1rem;
+}
+
+.contact-item:nth-child(even) {
+    background-color: #f9f9f9;
+}
+
+.contact-name, .contact-number, .contact-actions {
+    flex: 1;
+    padding-right: 1rem; /* Add spacing between columns in items */
+}
+
+.contact-name {
+    padding-right: 2rem; /* More space before the next column */
+}
+
+.contact-number {
+    padding-right: 2rem; /* More space before the next column */
+}
+
+.contact-actions {
+    display: flex;
+    gap: 0.5rem;
+    padding-right: 1rem;
+}
+.contact {
+    display: flex;
+    padding: 0.1875rem;
+}
+
+
+/* Buttons Styling */
+
+.btn {
+    display: flex;
     align-items: center;
-    
+    padding: 0.625rem 1.25rem;
+    border: none;
+    border-radius: 0.3125rem;
+    color: white;
+    cursor: pointer;
+    font-size: 1rem;
+    transition: background-color 0.3s ease;
 }
 
 .close-btn {
     position: absolute;
-    top: 10px;
-    right: 10px;
+    top: 0.625rem;
+    right: 0.625rem;
     background-color: red;
     color: white;
     border: none;
     border-radius: 50%;
     cursor: pointer;
-    width: 25px;
-    height: 25px;
+    width: 1.5625rem;
+    height: 1.5625rem;
     display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+}
+
+.editbuttom,
+.delbuttom {
+    background-size: cover;
+    width: 1.875rem;
+    height: 1.875rem;
+    background-repeat: no-repeat;
+    cursor: pointer;
+    border: none;
+    border-radius: 50%;
+    transition: background-color 0.3s ease, box-shadow 0.3s ease;
+}
+
+
+.editbuttom {
+    background-image: url("assets/edit.png");
+}
+
+.editbuttom:hover {
+    background-color: rgba(76, 174, 76, 0.5);
+    box-shadow: 0 0 0.625rem rgba(76, 174, 76, 0.5);
+}
+
+.delbuttom {
+    background-image: url("assets/delete.png");
+}
+
+.delbuttom:hover {
+    background-color: rgba(255, 0, 0, 0.5);
+    box-shadow: 0 0 0.625rem rgba(255, 0, 0, 0.5);
+}
+
+
+#darkModeToggle {
+    color: black;
+    position: absolute;
+    top: 5.625rem;
+    right: 0.9375rem;
+    background-color: white;
+}
+
+#openModelBtn {
+    position: absolute;
+    top: 1.875rem;
+    right: 0.9375rem;
+    background-color: #f0f0f0;
+    color: black;
+}
+
+#deleteBtn {
+    margin-bottom: 0.625rem;
+}
+
+.button-icon {
+    width: 1.375rem;
+    height: 1.375rem;
+    margin-right: 0.5rem;
+}
+
+
+/* Forms Styling */
+
+.formwrap {
+    width: 15.625rem;
+    display: none;
+}
+
+.contactform {
+    gap: 0.625rem;
+}
+
+.hideform {
+    display: block;
+}
+
+/* Footer Styling */
+
+footer {
+    display: flex;
+    justify-content: center;
+    padding: 2.1875rem;
+    background-color: #AC9362;
+}
+
+footer ul {
+    display: flex;
+    justify-content: space-between;
+    width: 95%;
+    margin: 0;
+    padding: 0;
+}
+
+/* Modal Styling */
+
+.model {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
     justify-content: center;
     align-items: center;
 }
 
+
+
+/* Input Styles */
+
 input[type="text"],
 input[type="email"] {
-    padding: 10px;
-    margin-bottom: 15px;
+    padding: 0.625rem;
+    margin-bottom: 0.9375rem;
     border: 1px solid #ccc;
-    border-radius: 5px;
-    width: calc(100% - 22px);
+    border-radius: 0.3125rem;
+    width: calc(100% - 1.375rem);
 }
 
 input[type="submit"] {
-    padding: 10px 20px;
+    padding: 0.625rem 1.25rem;
     border: none;
-    border-radius: 5px;
+    border-radius: 0.3125rem;
     background-color: #5cb85c;
     color: white;
-    font-size: 16px;
+    font-size: 1rem;
     cursor: pointer;
-    margin-top: 10px;
+    margin-top: 0.625rem;
 }
 
 input[type="submit"]:hover {
@@ -192,41 +299,271 @@ h2 {
     color: #333;
 }
 
-.btn {
-    padding: 10px 20px;
-    font-size: 18px;
-    color: white;
-    background-color: #007bff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-}
+/* Info pop-up window Styling */
 
 .info {
     background-color: #fefefe;
-    margin: 15% auto; /* 15% from the top and centered */
-    padding: 20px;
+    margin: 15% auto;
+    padding: 1.25rem;
     border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
-    max-width: 500px; /* Limit the width */
-    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
-    border-radius: 10px;
+    width: 80%;
+    max-width: 31.25rem;
+    box-shadow: 0 0.3125rem 0.9375rem rgba(0, 0, 0, 0.3);
+    border-radius: 0.625rem;
     position: relative;
 }
 
-.dark-mode
-{
-    background-color: black;
+.info h2::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 0.25rem;
+    background-color: #AC9362;
+    border-radius: 0.125rem;
+}
+
+.showinfo {
+    background-size: cover;
+    width: 1.875rem;
+    height: 1.875rem;
+    background-image: url("assets/info.png");
+    background-repeat: no-repeat;
+    cursor: pointer;
+    border: none;
+    border-radius: 50%;
+    transition: background-color 0.3s ease, box-shadow 0.3s ease;
+}
+
+.showinfo:hover {
+    background-color: yellow;
+    box-shadow: 0 0 0.625rem rgba(76, 174, 76, 0.5);
+}
+
+/* Dark mode styles */
+
+.dark-mode .contact-header {
+    background-color: #2c2c2c;
+    color: #e0e0e0;
+}
+
+.dark-mode .contact-item {
+    background-color: #3a3a3a;
+    border-color: #2c2c2c;
+}
+
+.dark-mode .contact-name, .dark-mode .contact-number {
+    color: #e0e0e0;
+}
+
+.dark-mode .contact-actions input {
+    background-color: #2c2c2c;
+    color: #e0e0e0;
+}
+.dark-mode {
+    background-color: grey;
     color: white;
 }
 
-.container
-{
-    justify-content: center; /* Horizontally center items */
+body.dark-mode header, body.dark-mode footer {
+    background-color: #333;
+}
+
+.dark-mode .content {
+    color: black;
+}
+
+.dark-mode .info {
+    color: black;
+}
+
+.container {
+    justify-content: center;
     align-items: center;
 }
 
-.dark-mode-header
-{
-    background-color: #4cae4c;
+
+
+/* Content styles */
+.content {
+    background-color: white;
+    padding: 2.5rem;
+    position: relative;
+    border-radius: 0.625rem;
+}
+
+.content h2 {
+    font-size: 1.875rem;
+    font-weight: 700;
+    color: #333;
+    margin: 1.25rem 0;
+    position: relative;
+    padding-bottom: 0.625rem;
+    text-align: center;
+}
+
+.content h2::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 0.25rem;
+    background-color: #AC9362;
+    border-radius: 0.125rem;
+}
+
+/* Search Bar Styling */
+.search-wrapper {
+    display: flex;
+    align-items: center;
+    max-width: 31.25rem;
+    margin: 0 auto;
+    border-radius: 0.3125rem;
+    border: 1px solid #ccc;
+    background-color: #f0f0f0;
+    margin-bottom: 0.625rem;
+}
+
+.search-icon {
+    padding: 0.625rem;
+    color: #aaa;
+    font-size: 1.125rem;
+    border-radius: 0.3125rem 0 0 0.3125rem;
+    border-right: 1px solid #ccc;
+    box-sizing: border-box;
+}
+
+#searchbtn {
+    flex: 1;
+    padding: 0.625rem;
+    border: none;
+    border-radius: 0 0.3125rem 0.3125rem 0;
+    font-size: 1rem;
+    outline: none;
+    box-sizing: border-box;
+    background-color: #f0f0f0;
+}
+
+#searchbtn:focus {
+    border-color: #007bff;
+}
+
+
+/* Media Queries */
+@media (max-width: 768px) {
+    header {
+        padding: 1rem;
+        height: auto;
+    }
+
+    ul {
+        font-size: 1.25rem;
+    }
+
+    .editbuttom, .delbuttom, .showinfo {
+        width: 1.5rem;
+        height: 1.5rem;
+    }
+
+    .info {
+        width: 90%;
+        max-width: none;
+    }
+
+    .contact {
+        flex-direction: column;
+        align-items: stretch;
+    }
+
+    .formwrap {
+        width: 100%;
+    }
+
+    .search-wrapper {
+        max-width: 100%;
+    }
+
+    #contactTable th, #contactTable td {
+        font-size: 1rem;
+    }
+
+    footer {
+        padding: 1.5rem;
+    }
+
+    footer ul {
+        font-size: 1rem;
+    }
+
+    .button-icon {
+        width: 1rem;
+        height: 1rem;
+        margin-right: 0.5rem;
+    }
+
+
+ 
+    #darkModeToggle {
+        font-size: 0.7rem;
+        color: black;
+        position: absolute;
+        top: 3.925rem;
+        right: 0.5375rem;
+        background-color: white;
+    }
+        
+    #openModelBtn {
+        font-size: 0.7rem;
+        position: absolute;
+        top: 1rem;
+        right: 0.5375rem;
+        background-color: #f0f0f0;
+        color: black;
+    }
+
+
+
+}
+
+@media (max-width: 480px) {
+    ul {
+        font-size: 1rem;
+    }
+
+    .header-icon {
+        width: 2.5rem;
+        height: 2.5rem;
+    }
+
+    .search-icon {
+        font-size: 1rem;
+    }
+
+    #searchbtn {
+        font-size: 0.875rem;
+    }
+
+    .content {
+        padding: 1.5rem;
+    }
+
+    .content h2 {
+        font-size: 1.5rem;
+    }
+
+    footer {
+        padding: 1rem;
+    }
+
+    footer ul {
+        font-size: 0.875rem;
+    }
+
+    .button-icon {
+        width: 0.7rem;
+        height: 0.7rem;
+        margin-right: 0.5rem;
+    }
 }
